Ran FindBugs, found some bugs, and squashed them.
git-svn-id: https://joshua.svn.sf.net/svnroot/joshua/trunk@780 0ae5e6b2-d358-4f09-a895-f82f13dd62a4