@@ -124,7 +124,7 @@ public class OracleExtractionHG extends SplitHg {
 		String f_ref_files = args[2].trim();
 		String f_orc_out =  args[3].trim();
 		int lm_order = Integer.parseInt(args[4].trim());
-		boolean orc_extract_nbest = new Boolean(args[5].trim()); // oracle extraction from nbest or hg
+		boolean orc_extract_nbest = Boolean.valueOf(args[5].trim()); // oracle extraction from nbest or hg
 		
 		//??????????????????????????????????????
 		int baseline_lm_feat_id = 0; 
